--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.8",
+    "@heroicons/react": "^2.1.5",
+    "@radix-ui/react-avatar": "^1.1.0",
     "@supabase/supabase-js": "^2.45.4",
+    "lucide-react": "^0.446.0",
+    "mini-css-extract-plugin": "^2.9.1",
     "next": "14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "shadcn-ui": "^0.9.2"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -21,7 +27,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.13",
     "typescript": "^5.6.2"
   }
 }
