--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "vercel-build": "NEXT_PUBLIC_IGNORE_BUILD_ERRORS=true next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -31,3 +32,5 @@
     "typescript": "^5.6.2"
   }
 }
+
+
